deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-java
        image: $IMAGE_NAME:$IMAGE_VERSION
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "1"
            memory: "500Mi"
