deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "ec2-54-89-243-114.compute-1.amazonaws.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hello-world-svc
                port:
                  number: 8080
    - host: "ec2-18-234-94-167.compute-1.amazonaws.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hello-world-svc
                port:
                  number: 8080
  ingressClassName: nginx
